Added Order Entity, Pharmacy side thymeleaf and other